--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Work Sans;
+    font-family: 'Work Sans', sans-serif;
 }
 
 .banner {
@@ -70,11 +70,88 @@
     font-weight: 400;
 }
 
-.chekar{
+.chekar {
     width: 24px;
     height: 24px;
 
 }
-.chekar-color{
+
+.chekar-color {
     color: #09e739;
+}
+
+.plan {
+    text-align: center;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    padding-bottom: 60px;
+    padding-top: 100px;
+}
+
+.icon {
+    display: flex;
+    justify-content: center;
+    gap: 90px;
+    padding-bottom: 100px;
+}
+
+.icon img {
+    width: 72.958px;
+    height: 72.958px;
+}
+
+.icone-details {
+    text-align: center;
+}
+
+.icon h2 {
+    text-align: center;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 800;
+    margin: 15px 0px;
+}
+
+.icon p {
+    color: var(--Dark-03, #737272);
+    text-align: center;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 500;
+}
+
+.watch {
+    text-align: center;
+    background-image: url('../images/watch.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 6px;
+}
+
+.gradient-text {
+    position: relative;
+    bottom: 300px;
+    right: 40px;
+    padding: 0 220px;
+    color: #FFF;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    margin-left: 10px;
+    margin-right: 300px;
+}
+
+.gradient-text button {
+    color: #F15B22;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    border-radius: 5px;
+    border: none;
+    width: 160px;
+    height: 64px;
+    padding: 10px 20px;
+    /* margin-top: 0px; */
+
 }
