--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,57 @@
     width: 160px;
     height: 64px;
     padding: 10px 20px;
-    /* margin-top: 0px; */
 
+}
+
+.fotter {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 200px;
+    background-color: #151414;
+    color: #FFF;
+    gap: 300px;
+    border-radius: 5px;
+
+}
+
+.fotter-subsribe input {
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #151414;
+    margin-bottom: 20px;
+    border: 2px solid rgb(105, 102, 102);
+}
+
+.fotter-subsribe button {
+    color: #F15B22;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 5px;
+    border: none;
+    padding: 10px 18px;
+}
+
+.socile-icone img {
+    width: 45px;
+    height: 46px;
+    padding-right: 15px;
+    padding-top: 20px;
+}
+
+.developar {
+    text-align: center;
+    padding: 80px 0px;
+    font-size: 12px;
+    color: #757575;
+}
+
+.developar-sub {
+    color: #9600FF;
+}
+
+a {
+    text-decoration: none;
+    color: #757575;
 }
